[package]
name = "game_provisioner"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
aws-config = "1"
aws-sdk-s3 = "1"
zip = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
